--- a/style.css
+++ b/style.css
@@ -22,30 +22,118 @@ progress{
 }
 audio:not([controls]){
     display:none;height:0
-}[hidden],template{display:none}
-a{background-color:transparent}a:active,a:hover{outline-width:0}
-abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}
-b,strong{font-weight:bolder}dfn{font-style:italic}mark{background:#ff0;color:#000}
-small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
-sub{bottom:-0.25em}sup{top:-0.5em}figure{margin:1em 40px}img{border-style:none}
-code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}hr{box-sizing:content-box;height:0;overflow:visible}
-button,input,select,textarea,optgroup{font:inherit;margin:0}optgroup{font-weight:bold}
-button,input{overflow:visible}button,select{text-transform:none}
-button,[type=button],[type=reset],[type=submit]{-webkit-appearance:button}
-button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}
-button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}
-fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}
-legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}
-[type=checkbox],[type=radio]{padding:0}
-[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}
-[type=search]{-webkit-appearance:textfield;outline-offset:-2px}
-[type=search]::-webkit-search-decoration{-webkit-appearance:none}
-::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
+}
+
+[hidden],template{
+    display:none}
+
+a{
+    background-color:transparent}
+
+a:active,a:hover{
+    outline-width:0}
+
+abbr[title]{
+    border-bottom:none;
+    text-decoration:underline;
+    text-decoration:underline dotted}
+
+b,strong{
+    font-weight:bolder}
+
+dfn{
+    font-style:italic}
+
+mark{
+    background:#ff0;
+    color:#000}
+
+small{
+    font-size:80%}
+
+sub,sup{
+    font-size:75%;
+    line-height:0;
+    position:relative;
+    vertical-align:baseline}
+
+sub{
+    bottom:-0.25em}
+
+sup{
+    top:-0.5em}
+
+figure{
+    margin:1em 40px}
+
+img{
+    border-style:none}
+
+code,kbd,pre,samp{
+    font-family:monospace,monospace;
+    font-size:1em}
+
+hr{box-sizing:content-box;
+    height:0;overflow:visible}
+
+button,input,select,textarea,optgroup{
+    font:inherit;
+    margin:0}
+
+optgroup{
+    font-weight:bold}
+
+button,input{
+    overflow:visible}
+
+button,select{
+    text-transform:none}
+
+button,[type=button],[type=reset],[type=submit]{
+    -webkit-appearance:button}
+
+button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{
+    border-style:none;
+    padding:0}
+
+button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{
+    outline:1px dotted ButtonText}
+
+fieldset{
+    border:1px solid #c0c0c0;
+    margin:0 2px;
+    padding:.35em .625em .75em}
+
+legend{
+    color:inherit;
+    display:table;
+    max-width:100%;
+    padding:0;
+    white-space:normal}
+
+textarea{
+    overflow:auto}
+
+[type=checkbox],[type=radio]{
+    padding:0}
+
+[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{
+    height:auto}
+[type=search]{
+    -webkit-appearance:textfield;
+    outline-offset:-2px}
+
+[type=search]::-webkit-search-decoration{
+    -webkit-appearance:none}
+
+::-webkit-file-upload-button{
+    -webkit-appearance:button;font:inherit}
+
 body {
-    font-family: "Times New Roman", Georgia, Serif;
+    font-family: "Times New Roman", Georgia, serif;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Playfair Display";
+    font-family: "Playfair Display", serif;
     letter-spacing: 5px;
 }
 /*!* NAV BAR*!*/
