--- a/style.css
+++ b/style.css
@@ -189,5 +189,43 @@ h1, h2, h3, h4, h5, h6 {
     float: right;
 }
 
+/*Picture Header*/
+.content{
+    margin-left: auto;
+    margin-right: auto;
+}
+.display-container{
+    position: relative;
+}
+.wide{
+    letter-spacing: 4px;
+}
+.image{
+    max-width{
+        max-width: 100%;
+        height:auto;
+
+    }
+img{
+    vertical-align: middle;
+    border-style: none;
+}
+.padding-large{
+    padding: 12px 24px;
+}
+.opacity{
+    opacity: 0.60;
+}
+.display-bottomLeft{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+.allusionfont{
+font-size: 36px;
+}
+
+
+
 
 
