--- a/style.css
+++ b/style.css
@@ -137,17 +137,17 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 5px;
 }
 /*!* NAV BAR*!*/
-.top{
+.top-nav{
     top:0;
     position: fixed;
     width: 100%;
     z-index: 1;
 }
-.white{
+.white-banner{
     color: #000;
     background-color: #fff;
 }
-.padding{
+.padding-nav{
     padding: 8px 16px;
 }
 .nav-box{
@@ -190,26 +190,30 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*Picture Header*/
-.content{
-    margin-left: auto;
-    margin-right: auto;
-}
+/*.content{*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*}*/
 .display-container{
     position: relative;
-}
-.wide{
+    margin-left: auto;
+    margin-right: auto;
     letter-spacing: 4px;
 }
+/*.wide{*/
+/*    letter-spacing: 4px;*/
+/*}*/
 .image{
         max-width: 100%;
         height:auto;
+        vertical-align: middle;
+        border-style: none;
 
     }
-img{
-    vertical-align: middle;
-    border-style: none;
-    height:auto;
-}
+/*img{*/
+/*    vertical-align: middle;*/
+/*    border-style: none;*/
+/*}*/
 
 
 
