working on founders page

--- a/style.css
+++ b/style.css
@@ -267,6 +267,18 @@ hr{
 .text-grey{
     color: #757575;
 }
+.padding-right-team{
+    width:500px;
+    float:left;
+    overflow: hidden;
+
+}
+.padding-left-team{
+    width:500px;
+    float:right;
+    margin-left: 25px;
+    overflow:hidden;
+}
 
 
 
