--- a/style.css
+++ b/style.css
@@ -310,16 +310,16 @@ hr{
 }
 #stAl {
     float:left;
-    width:100px;
+    /*width:100px;*/
 }
 
 #stT {
     display: inline-block;
     margin:0 auto;
-    width:100px;
+    /*width:100px;*/
 }
 
 #stJ {
     float: right;
-    width: 100px;
+    /*width: 100px;*/
 }
