did basic panel

--- a/style.css
+++ b/style.css
@@ -325,6 +325,11 @@ hr{
     /*width: 100px;*/
 }
 
+/*Info*/
+/*.infographic{*/
+/*   align:center;*/
+/*}*/
+
 /*FAQ*/
 .accordion {
     background-color: #eee;
