--- a/style.css
+++ b/style.css
@@ -130,10 +130,10 @@ textarea{
     -webkit-appearance:button;font:inherit}
 
 body {
-    font-family: "Times New Roman", Georgia, serif;
+    font-family: 'Lato', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Playfair Display", serif;
+    font-family: 'Volkorn', san-serif;
     letter-spacing: 5px;
 }
 /*!* NAV BAR*!*/
@@ -380,7 +380,7 @@ hr{
 }
 
 .typeform-widget{
-    font-family: Sans-Serif, serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
     color: #999;
     opacity: 0.5; 
