--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /*!* SETUP FROM W3*!*/
+
 html{
     box-sizing:border-box
 }*,*:before,*:after{box-sizing:inherit}
@@ -130,10 +131,11 @@ textarea{
     -webkit-appearance:button;font:inherit}
 
 body {
-    font-family: "Times New Roman", Georgia, serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: lighter;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Playfair Display", serif;
+    font-family: 'Vollkorn', serif;
     letter-spacing: 5px;
 }
 /*!* NAV BAR*!*/
@@ -363,13 +365,13 @@ hr{
 }
 
 .active, .accordion:hover {
-    background-color: pink;
+    background-color: rgba(210,240,241, 1);
 }
 
 .panel {
     padding: 0 18px;
     display: none;
-    background-color: rgba(255, 192, 203, .5);
+    background-color: rgba(210, 240, 241, .5);
     overflow: hidden;
 }
 
@@ -380,7 +382,7 @@ hr{
 }
 
 .typeform-widget{
-    font-family: Sans-Serif, serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
     color: #999;
     opacity: 0.5; 
