aligned layer one of resources

--- a/style.css
+++ b/style.css
@@ -403,15 +403,17 @@ hr{
 }
 
 /*RESOURCES*/
-.column {
+.column-resource {
     float: left;
     width: 33.33%;
     padding: 10px;
+    overflow: hidden;
 }
 
 /* Clearfix (clear floats) */
-.row::after {
+.row-resource::after {
     content: "";
     clear: both;
     display: table;
+    overflow: hidden;
 }
