--- a/style.css
+++ b/style.css
@@ -205,6 +205,49 @@ h1, h2, h3, h4, h5, h6 {
     border-style: none;
 
 }
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 125px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /*!* One Mission *!*/
 .row-mission{
     /*width: 50%;*/
@@ -348,10 +391,8 @@ hr{
 }
 
 
-/*Info*/
-/*.infographic{*/
-/*   align:center;*/
-/*}*/
+/*Picture Slider*/
+
 
 /*FAQ*/
 .accordion {
