--- a/style.css
+++ b/style.css
@@ -567,3 +567,57 @@ hr{
     margin-left: auto;
     margin-right: auto;
 }
+
+/*Icon Baby*/
+/* Style all font awesome icons */
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+.fa-snapchat-ghost {
+    background: #fffc00;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+/*bottom navbar*/
+.navbar-bottom a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navbar-bottom a:hover {
+    background: #f1f1f1;
+    color: black;
+}
+
+.navbar-bottom a.active {
+    background-color: #4CAF50;
+    color: white;
+}
