--- a/style.css
+++ b/style.css
@@ -604,20 +604,20 @@ hr{
 /*bottom navbar*/
 .navbar-bottom a {
     float: left;
-    display: block;
-    color: #f2f2f2;
+    /*display: block;*/
+    /*color: #f2f2f2;*/
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
 
-.navbar-bottom a:hover {
-    background: #f1f1f1;
-    color: black;
-}
+/*.navbar-bottom a:hover {*/
+/*    background: #f1f1f1;*/
+/*    color: black;*/
+/*}*/
 
-.navbar-bottom a.active {
-    background-color: #4CAF50;
-    color: white;
-}
+/*.navbar-bottom a.active {*/
+/*    background-color: #4CAF50;*/
+/*    color: white;*/
+/*}*/
