--- a/style.css
+++ b/style.css
@@ -411,6 +411,18 @@ hr{
     font-size: 15px;
     transition: 0.4s;
 }
+.accordion-button {
+    background-color: ghostwhite;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
 
 
 .active, .accordion:hover {
