--- a/style.css
+++ b/style.css
@@ -639,5 +639,25 @@ hr{
 /*    color: white;*/
 /*}*/
 
-/*Scroll Bar*/
+/*Multiple Choice Test*/
 
+.question{
+    font-weight: 600;
+}
+.answers {
+    margin-bottom: 20px;
+}
+#submit{
+    font-family: sans-serif;
+    font-size: 20px;
+    background-color: #297;
+    color: #fff;
+    border: 0px;
+    border-radius: 3px;
+    padding: 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+#submit:hover{
+    background-color: #3a8;
+}
