--- a/style.css
+++ b/style.css
@@ -641,21 +641,44 @@ hr{
 
 /*Multiple Choice Test*/
 
+/*.question{*/
+/*    font-weight: 600;*/
+/*}*/
+/*.answers {*/
+/*    margin-bottom: 20px;*/
+/*}*/
+/*#submit{*/
+/*    font-family: sans-serif;*/
+/*    font-size: 20px;*/
+/*    background-color: #297;*/
+/*    color: #fff;*/
+/*    border: 0px;;*/
+/*    cursor: pointer;*/
+/*    margin-bottom: 20px;*/
+/*}*/
+/*#submit:hover{*/
+/*    background-color: #3a8;*/
+/*}*/
+
 .question{
     font-weight: 600;
 }
 .answers {
     margin-bottom: 20px;
 }
+.answers label{
+    display: block;
+}
 #submit{
     font-family: sans-serif;
     font-size: 20px;
-    background-color: #297;
+    background-color: green;
     color: #fff;
-    border: 0px;;
+    border: 0px;
+    border-radius: 3px;
     cursor: pointer;
     margin-bottom: 20px;
 }
 #submit:hover{
-    background-color: #3a8;
+    background-color: #38a;
 }
