--- a/style.css
+++ b/style.css
@@ -401,7 +401,6 @@ hr{
 /*FAQ*/
 .accordion {
     background-color: ghostwhite;
-    color: #444;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -413,7 +412,6 @@ hr{
 }
 .accordion-button {
     background-color: ghostwhite;
-    color: #444;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -434,6 +432,7 @@ hr{
     display: none;
     background-color: rgba(210, 240, 241, 1);
     overflow: hidden;
+    color: #bbbbbb;
 }
 
 
