attempt fixed bottom nav bar

--- a/style.css
+++ b/style.css
@@ -620,7 +620,7 @@ hr{
 /*bottom navbar*/
 .navbar-bottom a {
     float: left;
-    /*display: block;*/
+    display: block;
     /*color: #f2f2f2;*/
     text-align: center;
     padding: 14px 16px;
