--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ hr{
 }
 #stAl {
     float:left;
+
     /*width:100px;*/
 }
 
@@ -391,6 +392,26 @@ hr{
     width: 100%; /* Full width */
     padding: 20px; /* Some padding */
 }
+/*.container-schools {*/
+/*    position: relative;*/
+/*    max-width: 1000px; !* Maximum width *!*/
+/*    margin: 0 auto; !* Center it *!*/
+/*    opacity:0;*/
+/*}*/
+/*.container-schools:hover{*/
+/*    opacity: 0.95;*/
+/*}*/
+
+/*.container-schools .content-schools {*/
+/*    position: absolute; !* Position the background text *!*/
+/*    bottom: 0; !* At the bottom. Use top:0 to append it to the top *!*/
+/*    background: rgb(0, 0, 0); !* Fallback color *!*/
+/*    background: rgba(0, 0, 0, 0.5); !* Black background with 0.5 opacity *!*/
+/*    color: #f1f1f1; !* Grey text *!*/
+/*    width: 100%; !* Full width *!*/
+/*    padding:    100px; !* Some padding *!*/
+/*}*/
+
 
 
 /*Picture Slider*/
